GearsetPOC/force-app/main/default/objects/Ticket_Sales_Processing__c/Ticket_Sales_Processing__c.object-meta.xml
<CustomObject>
    <label>Ticket Sales Processing</label>
    <nameField>
        <label>Ticket Sales Processing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ticket Sales Processings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>