GearsetPOC/force-app/main/default/objects/Ticket_Sales_Processing__c/fields/Audit_Reference__c.field-meta.xml
<CustomField>
    <fullName>Audit_Reference__c</fullName>
    <externalId>true</externalId>
    <label>Audit Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>