GearsetPOC/force-app/main/default/objects/Ticket_Sales_Processing__c/fields/Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancelled?</label>
    <type>Checkbox</type>
</CustomField>