GearsetPOC/force-app/main/default/objects/Ticket_Sales_Processing__c/fields/Checked_in__c.field-meta.xml
<CustomField>
    <fullName>Checked_in__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checked in</label>
    <type>Checkbox</type>
</CustomField>