GearsetPOC/force-app/main/default/objects/Ticket_Sales_Processing__c/fields/Class_Of_Service__c.field-meta.xml
<CustomField>
    <fullName>Class_Of_Service__c</fullName>
    <label>Class Of Service</label>
    <length>100</length>
    <type>Text</type>
</CustomField>