GearsetPOC/force-app/main/default/objects/Ticket_Sales_Processing__c/fields/Departure_date__c.field-meta.xml
<CustomField>
    <fullName>Departure_date__c</fullName>
    <label>Departure date</label>
    <type>Date</type>
</CustomField>