GearsetPOC/force-app/main/default/objects/Ticket_Sales_Processing__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <label>Event Date</label>
    <type>DateTime</type>
</CustomField>