GearsetPOC/force-app/main/default/objects/Ticket_Sales_Processing__c/fields/hotelRef__c.field-meta.xml
<CustomField>
    <fullName>hotelRef__c</fullName>
    <label>hotelRef</label>
    <length>100</length>
    <type>Text</type>
</CustomField>