GearsetPOC/force-app/main/default/objects/Ticket_Sales_Processing__c/fields/IsPartOfAPackage__c.field-meta.xml
<CustomField>
    <fullName>IsPartOfAPackage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPartOfAPackage</label>
    <type>Checkbox</type>
</CustomField>