GearsetPOC/force-app/main/default/objects/Ticket_Sales_Processing__c/fields/Manual_Ticket_Linking_Override__c.field-meta.xml
<CustomField>
    <fullName>Manual_Ticket_Linking_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Ticket Linking Override</label>
    <type>Checkbox</type>
</CustomField>