GearsetPOC/force-app/main/default/objects/Ticket_Sales_Processing__c/fields/Only_Payment_Criteria_Failed__c.field-meta.xml
<CustomField>
    <fullName>Only_Payment_Criteria_Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Only Payment Criteria Failed?</label>
    <type>Checkbox</type>
</CustomField>