GearsetPOC/force-app/main/default/objects/Ticket_Sales_Processing__c/fields/Passenger_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Passenger_First_Name__c</fullName>
    <label>Passenger First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>