GearsetPOC/force-app/main/default/objects/Ticket_Sales_Processing__c/fields/Passenger_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Last_Name__c</fullName>
    <label>Passenger Last Name</label>
    <type>TextArea</type>
</CustomField>