GearsetPOC/force-app/main/default/objects/Ticket_Sales_Processing__c/fields/Payment_Currency_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Currency_Amount__c</fullName>
    <label>Payment Currency Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>