GearsetPOC/force-app/main/default/objects/Ticket_Sales_Processing__c/fields/Payment_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Payment_Currency_Code__c</fullName>
    <label>Payment Currency Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>