GearsetPOC/force-app/main/default/objects/Ticket_Sales_Processing__c/fields/PNR__c.field-meta.xml
<CustomField>
    <fullName>PNR__c</fullName>
    <label>PNR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>