GearsetPOC/force-app/main/default/objects/Ticket_Sales_Processing__c/fields/Points_eligible__c.field-meta.xml
<CustomField>
    <fullName>Points_eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Points eligible</label>
    <type>Checkbox</type>
</CustomField>