GearsetPOC/force-app/main/default/objects/Ticket_Sales_Processing__c/fields/Points_indicator__c.field-meta.xml
<CustomField>
    <fullName>Points_indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Points Earned</label>
    <type>Checkbox</type>
</CustomField>