GearsetPOC/force-app/main/default/objects/Ticket_Sales_Processing__c/fields/Points_Ineligibility_Reason__c.field-meta.xml
<CustomField>
    <fullName>Points_Ineligibility_Reason__c</fullName>
    <label>Points Ineligibility Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>