GearsetPOC/force-app/main/default/objects/Ticket_Sales_Processing__c/fields/Potential_points__c.field-meta.xml
<CustomField>
    <fullName>Potential_points__c</fullName>
    <label>Potential points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>