GearsetPOC/force-app/main/default/objects/Ticket_Sales_Processing__c/fields/Refundable__c.field-meta.xml
<CustomField>
    <fullName>Refundable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refundable?</label>
    <type>Checkbox</type>
</CustomField>