GearsetPOC/force-app/main/default/objects/Ticket_Sales_Processing__c/fields/TCN__c.field-meta.xml
<CustomField>
    <fullName>TCN__c</fullName>
    <externalId>true</externalId>
    <label>TCN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>