GearsetPOC/force-app/main/default/objects/Ticket_Sales_Processing__c/fields/Ticket_Subscription_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Subscription_Indicator__c</fullName>
    <label>Ticket/Subscription Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ticket</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>