GearsetPOC/force-app/main/default/objects/Ticket_Sales_Processing__c/fields/User_Link__c.field-meta.xml
<CustomField>
    <fullName>User_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Link</label>
    <referenceTo>LoyaltyProgramMember</referenceTo>
    <relationshipLabel>Ticket Sales Processings</relationshipLabel>
    <relationshipName>Ticket_Sales_Processings</relationshipName>
    <type>Lookup</type>
</CustomField>