GearsetPOC/force-app/main/default/objects/Ticket_Sales_Processing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PNR__c</columns>
    <columns>Audit_Reference__c</columns>
    <columns>Departure_DateTime__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Points_eligible__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Status_Message__c</columns>
    <columns>Cancelled__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Points_indicator__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>